--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JavaScript Calculator</title>
     <link rel="icon" href="/favicons.png" type="image/png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=VT323&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
