--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>JavaScript Calculator</title>
+    <title>React Calculator</title>
     <link rel="icon" href="/favicons.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=VT323&display=swap"
